--- a/src/main/webapp/reactjs/public/index.html
+++ b/src/main/webapp/reactjs/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://png.pngtree.com/png-clipart/20190520/original/pngtree-food-logo-designs-with-spoon-and-fork-png-image_4158238.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
         rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     
     <title>Food App</title>
   </head>
-  <body style="background-color: white;">
+  <body style="background-color:#b89f8d">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
